refactor(Layout): refactor layout styles for possibility to use inherit background color

--- a/src/app/modules/dashboard/dashboard.component.css
+++ b/src/app/modules/dashboard/dashboard.component.css
@@ -3,5 +3,9 @@
 }
 
 #wrapper {
+    height: 100%;
+    overflow: hidden;
+    min-height: 740px;
+    background-color: #FFF;
     padding: 20px;
 }
