--- a/src/app/modules/projects/project-create/project-create.component.css
+++ b/src/app/modules/projects/project-create/project-create.component.css
@@ -3,6 +3,10 @@
 }
 
 #wrapper {
+    height: 100%;
+    overflow: hidden;
+    min-height: 740px;
+    background-color: #FFF;
     padding: 20px;
 }
 
