--- a/src/app/modules/projects/projects.component.css
+++ b/src/app/modules/projects/projects.component.css
@@ -11,9 +11,18 @@
     flex-wrap: wrap;
 }
 
+@media (max-width: 768px) {
+    .projects-wrapper {
+        justify-content: center;
+    }
+}
+
 .project-card {
     margin: 25px;
     width: 300px;
+    /*box-shadow: 0 1px 0px #dfe2e7;*/
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15), inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+    /*#dfe2e7;*/
     overflow: hidden;
 }
 
