fix(Layout): fixes layout

--- a/src/app/modules/projects/projects.component.css
+++ b/src/app/modules/projects/projects.component.css
@@ -54,8 +54,8 @@
 
 .edit-button {
     margin: 10px;
-    background-color: #CACACA;
-    border-color: #CCC;
+    background-color: #999;
+    border-color: #777;
 }
 
 #wrapper.dark-theme div.project-card {
