--- a/src/app/modules/users/users.component.html
+++ b/src/app/modules/users/users.component.html
@@ -3,7 +3,7 @@
   <div>
     <a routerLink="create" class="btn btn-primary">Create New User</a>
     <br>
-    <table *ngIf="users.length > 0;" class="table table-striped">
+    <table *ngIf="users.length > 0;" class="table">
       <thead>
         <tr>
           <th>User name</th>
