--- a/src/app/modules/projects/project-details/project-details.component.html
+++ b/src/app/modules/projects/project-details/project-details.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper" *ngIf="project">
-  <table class="table table-striped">
+  <table class="table">
     <thead>
       <tr>
         <th>Project Name</th>
