fix(Layout): fix styles for mobile devices

--- a/src/app/modules/layout/layout.component.css
+++ b/src/app/modules/layout/layout.component.css
@@ -33,13 +33,25 @@ body {
     min-height: 740px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
     .sidebar-collapsed {
         padding-left: 0 !important;
     }
     #wrapper {
-        flex-direction: column;
+        overflow: hidden;
     }
+    .sidebar-full {
+        padding-left: 89%;
+    }
+
+    .sidebar-full > #content-wrapper {
+        display: none !important;
+    }
+
+    .sidebar-collapsed > #content-wrapper {
+        display: block !important;
+    }
+
 }
 
 
