--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -1,4 +1,3 @@
-
 .bright-theme {
     background: #FFF;
 }
@@ -43,11 +42,11 @@
 
 .navigation-bar.dark-theme .dropdown-content ul li a:hover {
     background-color: #1B2531;
-    
     /* alternative color */
     /*background-color: #ddd;*/
     /*color: #1B2531;*/
 }
+
 
 /* DEFAULT STYLES */
 
@@ -60,7 +59,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    padding: 1em;
+    padding: 17px;
     text-decoration: none;
     color: #777;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -72,11 +71,11 @@
 }
 
 .navigation-bar .toggle {
-    padding: 1em;
+    padding: 17px;
     color: #7a7f8c;
     vertical-align: middle;
     position: relative;
-    left: 7px;
+    left: 4px;
 }
 
 @media (min-width: 1em) {
@@ -126,6 +125,22 @@
     }
 }
 
+@media (max-width: 768px) {
+    .navigation-bar.show-right .right {
+        display: none !important;
+    }
+    .navigation-bar .dropbtn i.fa-user {
+        font-size: 20px;
+        display: block !important;
+    }
+    .navigation-bar .dropbtn span {
+        display: none;
+    }
+    .navigation-bar .dropdown-item .dropbtn {
+        padding: 0;
+    }
+}
+
 
 /* ICONS */
 
@@ -143,6 +158,10 @@
     font-size: 20px;
 }
 
+.navigation-bar .dropbtn i.fa-user {
+    display: none;
+}
+
 .fa-power-off,
 .fa-user {
     color: #676a6c;
@@ -152,9 +171,6 @@
     position: relative;
     cursor: pointer;
 }
-
-
-
 
 .notifications-alarm:after {
     content: '';
@@ -195,7 +211,6 @@
     padding: 14px 16px;
     position: relative;
 }
-
 
 .container a:hover,
 .dropdown-item:hover .dropbtn {
