--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="left">
       <a id="menu_toggle" class="toggle" (click)="collapseToggle();"><i class="fa fa-bars"></i></a>
     </div>
-    <div class="right">
+    <div class="right" [class.show-right]="sidebarCollapsed">
 
       <a class="icon-info link dropbtn" (click)="shown !== 'NOTIFICATIONS' ? shown = 'NOTIFICATIONS' : shown = ''"><i class="fa fa-bell" aria-hidden="true"></i>
         <span class="notifications-alarm"></span>
@@ -20,7 +20,7 @@
 
 
       <li class="link dropdown-item">
-        <a class="dropbtn" (click)="shown !== 'SETTINGS' ? shown = 'SETTINGS' : shown = ''">{{ user.firstName }} {{ user.lastName }} <span class="fa fa-angle-down" [class.chevron-rotated]="shown === 'SETTINGS'"></span></a>
+        <a class="dropbtn" (click)="shown !== 'SETTINGS' ? shown = 'SETTINGS' : shown = ''"><i class="fa fa-user"></i> <span>{{ user.firstName }} {{ user.lastName }}</span> <span class="fa fa-angle-down" [class.chevron-rotated]="shown === 'SETTINGS'"></span></a>
         <div class="dropdown-content" [class.show]="shown === 'SETTINGS'">
           <ul>
             <li><a routerLink="/profile"><i class="fa fa-user"></i> {{ 'HEADER.USER_PROFILE' | translate }}</a></li>
