--- a/src/app/modules/projects/projects.component.html
+++ b/src/app/modules/projects/projects.component.html
@@ -19,8 +19,8 @@
       </div>
 
 
-      <div class="project-card card">
-        <div class="card-block create-card">
+      <div class="project-card card create-card">
+        <div class="card-block">
           <h1><i class="fa fa-3x fa-plus"></i></h1>
         </div>
         <a [routerLink]="['./create']" class="btn btn-primary create-button">Create Project</a>
