--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div id="login-wrapper" [class.dark-theme]="themeService.theme">
+<div id="wrapper" [class.dark-theme]="themeService.theme">
     <div id="login" class="col-md-4 offset-md-4">
         <div id="logo">
             <span id="logo-strong">Test</span>
