feat(Toast): introduce toast notifications

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper" [class.dark-theme]="themeService.theme">
-    
+    <simple-notifications></simple-notifications>
     <app-sidebar [sidebarCollapsed]="sidebarCollapsed"></app-sidebar>
 
     <div id="main" class="sidebar-full" [class.sidebar-collapsed]="sidebarCollapsed">
