--- a/src/app/modules/users/users.component.html
+++ b/src/app/modules/users/users.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="users" id="wrapper" [class.dark-theme]="themeService.theme">
+<div id="wrapper" [class.dark-theme]="themeService.theme">
 
-  <div>
+  <div *ngIf="users">
     <a routerLink="create" class="btn btn-primary">Create New User</a>
-    <br>
+
     <table *ngIf="users.length > 0;" class="table">
       <thead>
         <tr>
@@ -29,10 +29,5 @@
     </table>
 
   </div>
-
-
-
-
-
 
 </div>
