--- a/src/app/modules/profile/profile.component.css
+++ b/src/app/modules/profile/profile.component.css
@@ -6,11 +6,17 @@
     height: 100%;
     overflow: hidden;
     min-height: 740px;
-    /* padding: 20px; */
+    background-color: #FFF;
+    padding: 20px;
+}
+
+#wrapper.dark-theme {
+    background-color: #283242;
+    color: #FFF;
 }
 
 #profile {
-    background-color: #FFF;
+    /* background-color: #FFF; */
     display: flex;
     height: 400px;
     width: 100%;
