--- a/src/app/modules/testcases/testcases.component.css
+++ b/src/app/modules/testcases/testcases.component.css
@@ -10,6 +10,11 @@
     padding: 20px;
 }
 
+#wrapper.dark-theme {
+    background-color: #283242;
+    color: #FFF;
+}
+
 .noexist-wrapper {
     display: flex;
     height: 600px;
