--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -5,7 +5,7 @@
 
 /* DARK THEME */
 
-.dark-theme {
+.navigation-bar.dark-theme {
     background: #283242;
 }
 
@@ -57,6 +57,10 @@
 
 
 /* DEFAULT STYLES */
+
+.navigation-bar {
+    background-color: #FFF;
+}
 
 .navigation-bar .toggle,
 .navigation-bar .brand {
