fix(Layout): fix header layout

--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -75,6 +75,7 @@
     padding: 17px;
     text-decoration: none;
     color: #777;
+    background-color: #FFF;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
