refactor(ToastNotifications): remove new service, proper setup existed library service

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper" [class.dark-theme]="themeService.theme">
-    <simple-notifications></simple-notifications>
+    <simple-notifications [options]="toastNotificationsOptions"></simple-notifications>
     <app-sidebar [sidebarCollapsed]="sidebarCollapsed"></app-sidebar>
 
     <div id="main" class="sidebar-full" [class.sidebar-collapsed]="sidebarCollapsed">
@@ -7,11 +7,11 @@
         <app-header (notify)="onNotify($event)"></app-header>
 
         <section id="content-wrapper">
-            
+
             <div id="content">
                 <router-outlet></router-outlet>
             </div>
-        
+
         </section>
     </div>
 </div>
