--- a/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.css
+++ b/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.css
@@ -6,39 +6,36 @@
     float: right;
 }
 
-.node-content-wrapper, .tree-children {
-  position: relative;
+
+/*
+ul,
+ul ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-.node-content-wrapper::before, .tree-children::after {
-  content: "";
-  position: absolute;
+ul ul {
+    margin-left: 10px;
+    background: transparent url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAKAQMAAABPHKYJAAAAA1BMVEWIiIhYZW6zAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH1ggGExMZBky19AAAAAtJREFUCNdjYMAEAAAUAAHlhrBKAAAAAElFTkSuQmCC') repeat-y 0 100%;
 }
 
-.node-content-wrapper::before {
-  border-bottom: 1px solid lightgrey;
-  border-left: 1px solid lightgrey;
-  height: 28px;
-  top: -17px;
-  width: 20px;
-  left: -28px;
+ul li {
+    margin: 0;
+    padding: 0 12px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #369;
+    font-weight: bold;
 }
 
-.tree-node-leaf > .node-wrapper > .node-content-wrapper::before {
-  width: 25px;
+ul ul li {
+    background: transparent url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAUAQMAAACK1e4oAAAABlBMVEUAAwCIiIgd2JB2AAAAAXRSTlMAQObYZgAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9YIBhQIJYVaFGwAAAARSURBVAjXY2hgQIf/GTDFGgDSkwqATqpCHAAAAABJRU5ErkJggg==') no-repeat 0 0;
 }
 
-.tree-children::after {
-  border-left: 1px solid lightgrey;
-  height: 100%;
-  top: -15px;
-  left: -15px;
+ul ul li.last,
+ul ul li:last-child {
+    background: white url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAUAQMAAACK1e4oAAAABlBMVEUAAwCIiIgd2JB2AAAAAXRSTlMAQObYZgAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9YIBhQIIhs+gc8AAAAQSURBVAjXY2hgQIf/GbAAAKCTBYBUjWvCAAAAAElFTkSuQmCC') no-repeat 0 100%;
+    background-position: left top;
 }
-
-treenode:last-child > .tree-node > .tree-children::after {
-  border-left: none;
-}
-
-.toggle-children {
-  z-index: 1;
-}
+*/
