feat(Testcases): small UI changes

--- a/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.css
+++ b/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.css
@@ -1,5 +1,5 @@
 #treeComponent {
-    border: 1px dashed #333;
+    border: 1px solid #CACACA;
     width: 300px;
     height: auto;
     min-height: 916px;
