--- a/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.html
+++ b/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.html
@@ -24,7 +24,7 @@
     <li class="file">composer.json</li>
   </ul>
   -->
-  <button (click)="createNewTestsuite();" class="btn btn-primary">Create testsuite</button>
+  <!--<button (click)="createNewTestsuite();" class="btn btn-primary">Create testsuite</button>-->
 
   <tree-root *ngIf="testsuitesViewModel" #tree [options]="options" [nodes]="testsuitesViewModel"></tree-root>
 
