--- a/src/app/modules/users/user-details/user-details.component.html
+++ b/src/app/modules/users/user-details/user-details.component.html
@@ -6,7 +6,7 @@
           <th>Last Name</th>
           <th>First Name</th>
           <th>Email</th>
-          <th>Projects</th>
+          <!--<th>Projects</th>-->
           <th>Created</th>
           <th>Updated</th>
           <th>Created By</th>
@@ -18,7 +18,7 @@
         <td>{{ user.lastName }}</td>
         <td>{{ user.firstName }}</td>
         <td>{{ user.email }}</td>
-        <td>{{ user.projects }}</td>
+        <!--<td>{{ user.projects }}</td>-->
         <td>{{ user.created }}</td>
         <td>{{ user.updated }}</td>
         <td>{{ user.createdBy }}</td>
