--- a/src/app/modules/testcases/testcases.component.css
+++ b/src/app/modules/testcases/testcases.component.css
@@ -16,9 +16,20 @@
     color: #FFF;
 }
 
+#testcases {
+    width: 1110px;
+    border: 1px solid #CACACA;
+    margin-right: 20px;
+}
+
 #testcases-wrapper {
-    width: 1100px;
+    width: 100%;
     overflow: hidden;
+}
+
+#template-wrapper {
+    display: flex;
+    direction: row;
 }
 
 .noexist-wrapper {
