feat(ProjectDetails): Basic UI for project details

--- a/src/app/modules/projects/project-details/project-details.component.css
+++ b/src/app/modules/projects/project-details/project-details.component.css
@@ -10,3 +10,22 @@
     background-color: #283242;
     color: #FFF;
 }
+
+.project-label {
+    color: gray;
+    margin-right: 50px;
+}
+
+.edit-button {
+    position: absolute;
+    right: 120px;
+}
+
+.delete-button {
+    position: absolute;
+    right: 0;
+}
+
+.align-end {
+    text-align: end;
+}
