feat(ProjectDetails): UI styles added to labels

--- a/src/app/modules/projects/project-details/project-details.component.css
+++ b/src/app/modules/projects/project-details/project-details.component.css
@@ -29,3 +29,11 @@
 .align-end {
     text-align: end;
 }
+
+.project-label-value {
+    color: #333;
+}
+
+#wrapper.dark-theme .project-label-value {
+    color: #FFF;
+}
